# DatSanta-2022

./: .gitignore  Makefile  README.md  coords.json  map2.json  openapi.json:Zone.Identifier  pyproject.toml  result.json  setup.cfg
scripts/: run.py
src/: logger.py
src/docs/: openapi.json
src/round1/: result.json
src/round1/scripts/: run.py
src/round1/services/: baskets.py  draft.py  net.py  points.py  visual.py
src/round2/: map2.json  result.json
src/round2/scripts/: net2.py  run.py  system2.py
src/round3/: map3.json  net3.py  system3.py
src/scripts/: hello.py  run.py
src/services/: bags.py  baskets.py  children.py  net.py  points.py  presents.py  system.py  visual.py
tests/: test_data.py
