[tool.poetry]
name = "hackathon-code"
version = "0.1.0"
description = ""
authors = [
    "Igor Gakhov <gakhov_igor@rambler.ru>",
    # Lyubov Shumilova
    # Sergey Prokhorov
]
packages = [
  { include = "src" },
]

[tool.poetry.scripts]
new-years-night = "src.scripts.run:main"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
