[tool.poetry]
name = "hackathon-code"
version = "0.1.0"
description = ""
authors = [
    "IgorGakhov <gakhov_igor@rambler.ru>",
    "Lova595 <shumilova.lyubochka@gmail.com>",
    "notsoyoungg <p.sergey1997@mail.ru>"
]
packages = [
  { include = "src" },
]

[tool.poetry.scripts]
new-years-night = "src.scripts.run:main"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.1"
matplotlib = "^3.6.2"
datetime = "^4.9"
pyqt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
